db path saved